--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,7 @@
 browser= firefox
 url=http://192.168.225.219:8090/index.php/login
 testDataLocation = //src//test//resources//testData//TaskCreationTestData.xlsx
+chromepath=./executables\\chromedriver.exe
 
 
 retryCount=0
